tests/spectest/call_ref.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\9c\80\80\80\00\05\60"
  "\01\7f\01\7f\60\01\7e\01\7e\60\02\7e\7e\01\7e\60"
  "\02\64\00\7f\01\7f\60\00\01\7f\03\8b\80\80\80\00"
  "\0a\03\00\00\00\04\01\02\01\01\01\06\9f\80\80\80"
  "\00\05\64\01\00\d2\05\0b\64\02\00\d2\06\0b\64\01"
  "\00\d2\07\0b\64\01\00\d2\08\0b\64\01\00\d2\09\0b"
  "\07\b1\80\80\80\00\07\03\72\75\6e\00\03\04\6e\75"
  "\6c\6c\00\04\03\66\61\63\00\05\07\66\61\63\2d\61"
  "\63\63\00\06\03\66\69\62\00\07\04\65\76\65\6e\00"
  "\08\03\6f\64\64\00\09\09\97\80\80\80\00\05\03\00"
  "\02\01\02\03\00\01\05\03\00\01\06\03\00\01\07\03"
  "\00\02\08\09\0a\e1\81\80\80\00\0a\88\80\80\80\00"
  "\00\20\01\20\00\14\00\0b\87\80\80\80\00\00\20\00"
  "\20\00\6c\0b\87\80\80\80\00\00\41\00\20\00\6b\0b"
  "\97\80\80\80\00\01\02\63\00\d2\01\21\01\d2\02\21"
  "\02\20\00\20\01\14\00\20\02\14\00\0b\88\80\80\80"
  "\00\00\41\01\d0\00\14\00\0b\97\80\80\80\00\00\20"
  "\00\50\04\7e\42\01\05\20\00\20\00\42\01\7d\23\00"
  "\14\01\7e\0b\0b\99\80\80\80\00\00\20\00\50\04\7e"
  "\20\01\05\20\00\42\01\7d\20\00\20\01\7e\23\01\14"
  "\02\0b\0b\a0\80\80\80\00\00\20\00\42\01\58\04\7e"
  "\42\01\05\20\00\42\02\7d\23\02\14\01\20\00\42\01"
  "\7d\23\02\14\01\7c\0b\0b\94\80\80\80\00\00\20\00"
  "\50\04\7e\42\2c\05\20\00\42\01\7d\23\04\14\01\0b"
  "\0b\95\80\80\80\00\00\20\00\50\04\7e\42\e3\00\05"
  "\20\00\42\01\7d\23\03\14\01\0b\0b"
)
(module instance)
(assert_return (invoke "run" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "run" (i32.const 0x3)) (i32.const 0xffff_fff7))
(assert_trap (invoke "null") "null function reference")
(assert_return (invoke "fac" (i64.const 0x0)) (i64.const 0x1))
(assert_return (invoke "fac" (i64.const 0x1)) (i64.const 0x1))
(assert_return (invoke "fac" (i64.const 0x5)) (i64.const 0x78))
(assert_return
  (invoke "fac" (i64.const 0x19))
  (i64.const 0x619f_b090_7bc0_0000)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x0) (i64.const 0x1))
  (i64.const 0x1)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x1) (i64.const 0x1))
  (i64.const 0x1)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x5) (i64.const 0x1))
  (i64.const 0x78)
)
(assert_return
  (invoke "fac-acc" (i64.const 0x19) (i64.const 0x1))
  (i64.const 0x619f_b090_7bc0_0000)
)
(assert_return (invoke "fib" (i64.const 0x0)) (i64.const 0x1))
(assert_return (invoke "fib" (i64.const 0x1)) (i64.const 0x1))
(assert_return (invoke "fib" (i64.const 0x2)) (i64.const 0x2))
(assert_return (invoke "fib" (i64.const 0x5)) (i64.const 0x8))
(assert_return (invoke "fib" (i64.const 0x14)) (i64.const 0x2ac2))
(assert_return (invoke "even" (i64.const 0x0)) (i64.const 0x2c))
(assert_return (invoke "even" (i64.const 0x1)) (i64.const 0x63))
(assert_return (invoke "even" (i64.const 0x64)) (i64.const 0x2c))
(assert_return (invoke "even" (i64.const 0x4d)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0x0)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0x1)) (i64.const 0x2c))
(assert_return (invoke "odd" (i64.const 0xc8)) (i64.const 0x63))
(assert_return (invoke "odd" (i64.const 0x4d)) (i64.const 0x2c))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
  "\00\00\60\00\01\7f\03\82\80\80\80\00\01\01\07\8f"
  "\80\80\80\00\01\0b\75\6e\72\65\61\63\68\61\62\6c"
  "\65\00\00\0a\8b\80\80\80\00\01\85\80\80\80\00\00"
  "\00\14\00\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
  "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
  "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
  "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
  "\00\0a\96\80\80\80\00\02\84\80\80\80\00\00\20\00"
  "\0b\87\80\80\80\00\00\00\d2\00\14\00\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
  "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
  "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
  "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
  "\00\0a\9b\80\80\80\00\02\84\80\80\80\00\00\20\00"
  "\0b\8c\80\80\80\00\00\00\41\00\d2\00\14\00\1a\41"
  "\00\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
    "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
    "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
    "\00\0a\98\80\80\80\00\02\84\80\80\80\00\00\20\00"
    "\0b\89\80\80\80\00\00\00\42\00\d2\00\14\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\03\83\80\80\80\00\02\00"
    "\01\07\8f\80\80\80\00\01\0b\75\6e\72\65\61\63\68"
    "\61\62\6c\65\00\01\09\85\80\80\80\00\01\03\00\01"
    "\00\0a\99\80\80\80\00\02\84\80\80\80\00\00\20\00"
    "\0b\8a\80\80\80\00\00\00\d2\00\14\00\1a\42\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\01\6f\00\03\82\80\80\80\00\01\01\0a\8c"
    "\80\80\80\00\01\86\80\80\80\00\00\20\00\14\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\01\70\00\03\82\80\80\80\00\01\01\0a\8c"
    "\80\80\80\00\01\86\80\80\80\00\00\20\00\14\00\0b"
  )
  "type mismatch"
)
